# uncarved

./: mindmap.toml  pyproject.toml  scratch.rst
design/: taxonomy.toml
tools/: backend.py
utils/: conflate.py  confuser.py  toml2dot.py  toml2gml.py
